[package]
name = "models"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[lib]
name = "models"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
env_logger = "0.7"
